# nosql-gql-dbms

./: .gitignore  Makefile  README.md  bench_delete_one_t.csv  bench_delete_two_t.csv  bench_read_32768.csv  bench_read_8192.csv  bench_write_32768.csv  bench_write_8192.csv
GQL client/: CMakeLists.txt  driver.hpp
GQLclient/: CMakeLists.txt  Node.hpp  dbms_client.hpp  driver.cc  driver.hpp  lexer.l  parser.y
GQLclient/network/: cmp.hpp  command.hpp  dbms_client.hpp  request.hpp  response.hpp  status.hpp  type.hpp
client/: driver.cc  driver.hpp  lexer.l  parser.y
dbms/: CMakeLists.txt  Makefile  make.sh
dbms/include/: dbms_server.hpp  query.hpp
dbms/include/bench/: bench.h
dbms/include/file/: file.h  header.h  header_p.h
dbms/include/json/: iter.h  json.h  pair.h  type.h
dbms/include/json/object/: attr.h  type.h  type_ent.h
dbms/include/network/: dbms_server.hpp  driver.hpp  request.hpp  response.hpp
dbms/include/query/: query_item.h
dbms/include/section/: extents.h  extents_p.h  types.h  types_p.h
dbms/include/tests/: test.h
dbms/include/user/: command.h  user.h
dbms/include/utils/: pair.h  utils.h
dbms/src/: bench.c  main.c  main.cc
dbms/src/bench/: bench.c
dbms/src/json/: iter.c  json.c  pair.c
dbms/src/object/: attr.c  type.c  type_ent.c
dbms/src/query/: path.c  query_item.c
dbms/src/section/: extents.c  header.c  types.c
dbms/src/tests/: file_type_add_tests.c  file_type_delete_tests.c  section_extents_delete_tests.c  section_extents_load_tests.c  section_types_delete_tests.c  section_types_find_tests.c  section_types_load_tests.c  section_types_read_tests.c  section_types_write_tests.c  tests.c
dbms/src/user/: user.c
dbms/src/utils/: string.c  table.c
grpc/: CMakeLists.txt  dbms_client.cc  dbms_server.cc  make.sh
include/: documents.h  extent.h  file.h  file_utils.h  page.h  page_p.h  perform.h  query.h  schema.h  table.h  table_file.h  table_types.h  utils.h  xml.h
include/entity/: entity_document.h  json_object_entity.h  json_value_entity.h  section_extents_entity.h  section_header_entity.h
include/json/: json_object.h  json_value.h
include/section/: section_documents.h  section_extent.h  section_extents.h  section_header.h  section_page.h  section_page_p.h
include/xml/: xml_document.h  xml_node.h
protos/: dbms.proto
solution/include/: list.h  table.h  utils.h
solution/include/entity/: json_object_entity.h  json_value_entity.h  section_extents_entity.h  section_header_entity.h
solution/include/file/: file.h  file_p.h
solution/include/json/: entity.h  json.h  json_value.h
solution/include/json/object/: attr_ent.h
solution/include/memory/: string.h
solution/include/memory/attribute/: attr.h  attr_col.h  obj_type.h
solution/include/memory/file/: file.h
solution/include/memory/json/: it_json.h  iter.h  json.h  json_col.h  json_type.h
solution/include/memory/query/: query.h  query_item.h
solution/include/memory/section/: extents.h  extents_p.h  header.h  header_p.h  types.h  types_p.h
solution/include/memory/type/: attr.h  attr_entity.h  type.h  type_entity.h
solution/include/physical/file/: header.h
solution/include/physical/json/: entity.h
solution/include/physical/section/: extents.h  header.h  types.h
solution/include/physical/type/: attr.h  type.h
solution/include/query/: path.h  query.h  query_item.h
solution/include/section/: extents.h  extents_p.h  header.h  header_p.h  section_extents.h  section_header.h
solution/include/tests/: test.h
solution/include/user/: user.h
solution/include/utils/: list.h  pair.h  string.h  table.h
solution/src/: bench.c  file_add_type_tests.c  file_delete_tests.c  file_find_tests.c  file_read_tests.c  file_type_add_tests.c  file_type_delete_tests.c  file_type_find_tests.c  file_update_tests.c  file_write_tests.c  iter_tests.c  json_value.c  json_value_entity.c  main.c  section_extents.c  section_extents_delete_tests.c  section_extents_find_tests.c  section_extents_load_tests.c  section_extents_read_tests.c  section_extents_update_tests.c  section_extents_write_tests.c  section_header_tests.c  section_types_delete_tests.c  section_types_find_tests.c  section_types_load_tests.c  section_types_read_tests.c  section_types_write_tests.c  string.c  utils.c
solution/src/entity/: json_value_entity.c
solution/src/file/: file.c  header.c
solution/src/json/: attr.c  attr_col.c  entity.c  it_json.c  iter.c  json.c  json_col.c  json_value.c  obj_type.c  pair.c
solution/src/object/: attr_ent.c
solution/src/query/: path.c  query.c  query_item.c
solution/src/section/: extents.c  header.c  header_entity.c  section_extents.c  section_header.c  section_header_entity.c  types.c
solution/src/tests/: file_read_tests.c  file_write_tests.c  section_extents_find_tests.c  section_extents_read_tests.c  section_extents_update_tests.c  section_extents_write_tests.c  section_header_tests.c  section_types_write_tests.c  tests.c
solution/src/type/: attr.c  attr_entity.c  type.c  type_entity.c
solution/src/user/: user.c
solution/src/utils/: table.c
src/: documents.c  entity_document.c  json_value.c  json_value_entity.c  main.c  page.c  section_documents.c  section_extent.c  section_extents.c  section_header.c  section_page.c  table_file.c  utils.c  xml_document.c  xml_node.c
tests/: main.c  section_extents_delete_tests.c  section_extents_read_tests.c  section_extents_tests.c  section_extents_write_tests.c  section_header_tests.c  section_page_test.c
